<resources>
    <string name="app_name">GUESS THE CAR</string>
    <string name="intro_text">Can You Guess The Car?</string>
    <string name="intro_img_text">Intro car image</string>
    <string name="correct">CORRECT!</string>
    <string name="wrong">WRONG!</string>
    <string name="correct_answer_is">Correct Answer is</string>

    <string name="main_btn_1">Car Make</string>
    <string name="main_btn_2">Hints</string>
    <string name="main_btn_3">Identify Car Image</string>
    <string name="main_btn_4">Advanced Level</string>
    <string name="main_title">GUESS THE CAR</string>
    <string name="main_heading">Select A Level</string>

    <string name="car_make_imageView">current car image</string>
    <string name="car_make_btn_identify">Identify</string>
    <string name="car_make_heading1">Please Select a Make</string>
    <string name="car_make_not_selected">Please Select a Make First !</string>
    <string-array name="car_make_spinner">
        <item>-- SELECT A MAKE --</item>
        <item>BMW</item>
        <item>FORD</item>
        <item>HONDA</item>
        <item>HYUNDAI</item>
        <item>MERCEDES</item>
        <item>NISSAN</item>
        <item>SUZUKI</item>
        <item>TESLA</item>
        <item>TOYOTA</item>
        <item>VOLKSWAGEN</item>
    </string-array>

    <string name="hints_heading1">Complete the Car Make</string>
    <string name="hints_hint" />
    <string name="hints_btn_Submit">Submit</string>
    <string name="hints_input">Enter a Character</string>

    <string name="identify_img_heading1">"Select "</string>
    <string name="identify_img_description">Car Image</string>
    <string name="identify_img_next">Next</string>
    <string name="identify_img_noAttempts">No Attempts Left. Click Next !</string>

    <string name="advanced_editText_hint">Enter Correct Make</string>
    <string name="advanced_heading1">Enter Correct Makes</string>
    <string name="advanced_image_description">A Car Image</string>
    <string name="advanced_submit">Submit</string>
    <string name="advanced_score">"Score: 0"</string>

    <string name="timer">00</string>



</resources>