<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Advanced">

    <TextView
        android:id="@+id/advanced_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_4"
        android:textColor="@color/blue_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advanced_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/advanced_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/advanced_heading1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/advanced_img_1"
                android:layout_width="190dp"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/advanced_image_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanced_score"
                app:srcCompat="@drawable/background_1" />

            <ImageView
                android:id="@+id/advanced_img_2"
                android:layout_width="190dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/advanced_image_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanced_img_1"
                app:srcCompat="@drawable/background_1" />

            <ImageView
                android:id="@+id/advanced_img_3"
                android:layout_width="190dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/advanced_image_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanced_img_2"
                app:srcCompat="@drawable/background_1" />

            <EditText
                android:id="@+id/advanced_img_1_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/advanced_editText_hint"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toEndOf="@+id/advanced_img_1"
                app:layout_constraintTop_toTopOf="@+id/advanced_img_1" />

            <TextView
                android:id="@+id/advanced_img_1_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/advanced_img_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/advanced_img_1"
                app:layout_constraintTop_toBottomOf="@+id/advanced_img_1_editText" />

            <EditText
                android:id="@+id/advanced_img_2_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/advanced_editText_hint"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toEndOf="@+id/advanced_img_2"
                app:layout_constraintTop_toTopOf="@+id/advanced_img_2" />

            <TextView
                android:id="@+id/advanced_img_2_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/advanced_img_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/advanced_img_2"
                app:layout_constraintTop_toBottomOf="@+id/advanced_img_2_editText" />


            <EditText
                android:id="@+id/advanced_img_3_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/advanced_editText_hint"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toEndOf="@+id/advanced_img_3"
                app:layout_constraintTop_toTopOf="@+id/advanced_img_3" />

            <TextView
                android:id="@+id/advanced_img_3_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/advanced_img_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/advanced_img_3"
                app:layout_constraintTop_toBottomOf="@+id/advanced_img_3_editText" />

            <TextView
                android:id="@+id/advanced_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/advanced_score"
                android:textColor="#3F51B5"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanced_heading" />

            <TextView
                android:id="@+id/advanced_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanced_img_3" />

            <Button
                android:id="@+id/advanced_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="onSubmit"
                android:text="@string/advanced_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanced_status" />

            <TextView
                android:id="@+id/advanced_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/timer"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanced_submit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>